examples/test/testpolicy12879.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12879
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key19: value37
      key44: value45
      key34: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value24
          key48: value11
          key24: value33
      podSelector:
        matchLabels:
          key37: value17
          key44: value32
